--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style/tree.css">
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/d3/d3.min.js"></script>
-  <script src="scripts/jquery.hoverIntent.minified.js"></script>
-  <script src="scripts/tree.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style/tree.css">
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/d3/d3.min.js"></script>
+	<script src="scripts/jquery.hoverIntent.minified.js"></script>
+	<script src="scripts/tree.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+	<!--<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>-->
+
 </head>
 <body>
   <div id="tree-container"></div>
   <div id="bio"></div>
+  <div id="search" class="nosearch">
+  <input id="q" type="search" placeholder="Búsqueda por nombre"/>
+  <div class="searchButtons"><a id="searchUp" tabindex="0"><svg viewBox="0 0 24 24"><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" /></svg></a><a id="searchDown" tabindex="0"><svg viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" /></svg></a>  </div>
+  <div class="searchCounter"><span id="searchPosition">0</span>/<span id="searchTotal">0</span></div>
+  </div>
 </body>
 </html>
